# b865-debugger

./: .gitignore  .gitmodules  8-bit_BreadBoard_emulator.code-workspace  Build.bat  CMakeLists.txt  Instructions.xlsx  LICENSE  Makefile  README.md  emulator  imgui.ini
.github/workflows/: c-cpp.yml
lib/: CMakeLists.txt
lib/b865-debugger/: Breakpoints.cpp  Breakpoints.h  CMakeLists.txt  CPU.cpp  CPU.h  Clock.cpp  Clock.h  Debugger.cpp  Debugger.h  Emulator.cpp  Emulator.h  MEM.h  Utils.cpp  Utils.h
lib/b865-debugger/Parser/: DebuggerData.h  Parser.cpp
src/: AssemblyLang.cpp  CMakeLists.txt  CPU.cpp  CPU.h  Clock.cpp  Clock.h  Common.h  Computer.h  Debugger.cpp  Debugger.h  Emulator.cpp  Emulator.h  FileExplorer.cpp  FileExplorer.h  FilePath.cpp  FilePath.h  FileTab.cpp  FileTab.h  MEM.cpp  MEM.h  MemMap.h  Pheriph.cpp  Pheriph.h  Pheriph_IO.cpp  SignalTables.h  Utils.cpp  Utils.h  Window.cpp  Window.h  gui.cpp  gui.h  gui_main.cpp  gui_render.cpp  main.cpp
src/Parser/: DebuggerData.cpp  DebuggerData.h  Parser.cpp  Parser.h
src/b865-db-cli/: CLI.cpp  CLI.h  CMakeLists.txt  main.cpp
src/b865-db-gui/: CMakeLists.txt  Event.cpp  Event.h  FileExplorer.cpp  FileExplorer.h  FileTab.cpp  FileTab.h  Window.cpp  Window.h  gui.cpp  gui.h  gui_render.cpp  main.cpp
test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  emulator_test  emulator_test.cpp
